okay, I think something I did recently messed up the alignment of the database list left margin wtih the header on top. I think this fix puts it back more or less to what was intended. Please review.

--- a/demo/css/xerxes-blue.css
+++ b/demo/css/xerxes-blue.css
@@ -309,7 +309,7 @@ a:hover {
 }
 
 ul.databaseSectionList {
-	margin: .7em;
+	margin: 1.25em;
 	border-left: 2px solid #ccc;
 	padding-left: 1em;
 }
